--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,9 @@
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="generator" content="2014.0.0.264"/>
-  <title>开场</title>
+  <title>ZHUO SUN</title>
+<link rel="icon" href="static/images/logo.png" type="image/x-icon" /> 
+
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/site_global.css?475048684"/>
   <link rel="stylesheet" type="text/css" href="static/css/index.css?3784502225" id="pagesheet"/>
