--- a/app/templates/jasmine.html
+++ b/app/templates/jasmine.html
@@ -9,6 +9,8 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="generator" content="2014.0.0.264"/>
   <title>Jasmine#</title>
+<link rel="icon" href="static/images/logo.png" type="image/x-icon" /> 
+
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/site_global.css?475048684"/>
   <link rel="stylesheet" type="text/css" href="static/css/jasmine-.css?3827665583" id="pagesheet"/>
