--- a/app/templates/l2.html
+++ b/app/templates/l2.html
@@ -9,6 +9,8 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="generator" content="2014.0.0.264"/>
   <title>L2</title>
+<link rel="icon" href="static/images/logo.png" type="image/x-icon" /> 
+
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/site_global.css?475048684"/>
   <link rel="stylesheet" type="text/css" href="static/css/l2.css?399130485" id="pagesheet"/>
