--- a/app/templates/mworks.html
+++ b/app/templates/mworks.html
@@ -9,6 +9,8 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
   <meta name="generator" content="2014.0.0.264"/>
   <title>Mworks</title>
+<link rel="icon" href="static/images/logo.png" type="image/x-icon" /> 
+
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/site_global.css?475048684"/>
   <link rel="stylesheet" type="text/css" href="static/css/mworks.css?433190862" id="pagesheet"/>
